# camel_pet

./: .gitignore  README.md  index.html  package-lock.json  package.json
agent/: .env.example  README.md  build.py  pyproject.toml  test_cli.py
agent/camel_pet_agent/: __main__.py  activity_store.py  agent.py  call.ipynb  focus_coach.py  memory.py  personality.py  scheduler.py  screen_monitor.py  server.py  vision_agent.py
agent/camel_pet_agent/tools/: __init__.py  activity.py  clipboard.py  screen.py  timer.py
src/: App.vue  styles.css
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs  tray.rs
src/components/: ActivityDashboard.vue  PetCanvas.vue  ScrollInput.vue  SettingsPanel.vue
src/services/: agentSocket.ts
src/stores/: config.ts
