[package]
name = "camel-pet"
version = "0.0.1"
description = "Camel Pet desktop mascot"
edition = "2021"

[lib]
name = "camel_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
device_query = "4.0.1"
